Fix header text alignment by decoupling .columns style from footer (#167)

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -79,6 +79,7 @@ footer .columns ul li a[href] {
   color: var(--mt-global-color-accent-quinary);
   line-height: var(--mt-body-line-height);
   height: auto;
+  font-size: var(--mt-footer-font-size-footer-l);
 }
 
 
@@ -90,6 +91,7 @@ footer .columns h5 {
   margin-top: unset;
   margin-bottom: 20px;
   padding-bottom: 3%;
+  text-align: left;
 }
 
 /* footer nav headlines larger display */
